--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bull-board": "^1.7.2",
     "bullmq": "^5.41.5",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
