--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@ ACCESS_TOKEN_SECRET=your_access_token_secret_here
 ACCESS_TOKEN_EXPIRY=40m
 REFRESH_TOKEN_SECRET=your_refresh_token_secret_here
 REFRESH_TOKEN_EXPIRY=10d
+RAZORPAY_TEST_KEY_ID=your_razorpay_test_key_id_here
+RAZORPAY_TEST_KEY_SECRET=your_razorpay_test_key_secret_here
