--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.4.5-lts.2",
     "nanoid": "^5.0.9",
     "nodemailer": "^6.9.16",
-    "prettier": "^3.4.1"
+    "prettier": "^3.4.1",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
